--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jscodeshift": "^0.14.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
+    "mongoose-sequence": "^5.3.1",
     "morgan": "~1.9.1",
     "nanoid": "^3.3.4",
     "node-fetch": "^2.6.7",
