--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
