--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "type": "module",
   "dependencies": {
     "@sindresorhus/is": "^5.3.0",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/yamljs": "^0.2.31",
     "bcrypt": "^5.1.0",
     "commonjs-to-es-module-codemod": "^0.5.5",
     "cookie-parser": "~1.4.4",
@@ -39,10 +41,10 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pug": "^3.0.2",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.2",
+    "swagger-cli": "^4.0.4",
     "winston": "^3.8.2",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^8.33.0",
@@ -53,6 +55,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "prettier": "^2.8.3",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2"
   }
 }
