--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Nine-Lab",
+  "name": "nine-lab",
   "version": "0.0.1",
   "main": "app.js",
   "private": true,
@@ -15,6 +15,7 @@
   "type": "module",
   "dependencies": {
     "@sindresorhus/is": "^5.3.0",
+    "@std/esm": "^0.26.0",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
     "bcrypt": "^5.1.0",
@@ -58,6 +59,9 @@
     "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2"
-  }
+  },
+  "description": "Repository for back-end of NineLab",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
-
